// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viz.render network/hierarchy render-fidelity goldens > chord: the produced echartsSpec matches the committed golden 1`] = `
{
  "aria": {
    "description": "Chord diagram of category↔category weighted flows.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "clockwise": true,
      "coordinateSystem": "none",
      "emphasis": {
        "focus": "adjacency",
      },
      "itemStyle": {
        "borderColor": "#D6DAE4",
        "borderWidth": 1,
      },
      "label": {
        "color": "#18233C",
        "position": "outside",
        "show": true,
      },
      "lineStyle": {
        "color": "source",
        "curveness": 0.5,
        "opacity": 0.5,
      },
      "links": [
        {
          "source": "AMER",
          "target": "EMEA",
          "value": 42,
        },
        {
          "source": "EMEA",
          "target": "APAC",
          "value": 31,
        },
        {
          "source": "APAC",
          "target": "AMER",
          "value": 25,
        },
      ],
      "minAngle": 0,
      "name": "Chord",
      "nodes": [
        {
          "itemStyle": {
            "color": "rgb(65, 108, 217)",
          },
          "name": "AMER",
        },
        {
          "itemStyle": {
            "color": "rgb(62, 68, 190)",
          },
          "name": "EMEA",
        },
        {
          "itemStyle": {
            "color": "rgb(39, 150, 105)",
          },
          "name": "APAC",
        },
      ],
      "padAngle": 3,
      "startAngle": 90,
      "type": "chord",
    },
  ],
  "tooltip": {
    "formatter": "{b}: {c}",
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Chord diagram of category↔category weighted flows.",
      },
      "specId": "viz:chord",
    },
  },
}
`;

exports[`viz.render network/hierarchy render-fidelity goldens > force_graph: the produced echartsSpec matches the committed golden 1`] = `
{
  "aria": {
    "description": "Force-directed graph of network data.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "legend": {
    "data": [
      "backend",
      "data",
      "frontend",
    ],
    "show": true,
    "textStyle": {
      "color": "#4B4D5A",
    },
  },
  "series": [
    {
      "categories": [
        {
          "itemStyle": {
            "color": "rgb(65, 108, 217)",
          },
          "name": "backend",
        },
        {
          "itemStyle": {
            "color": "rgb(62, 68, 190)",
          },
          "name": "data",
        },
        {
          "itemStyle": {
            "color": "rgb(39, 150, 105)",
          },
          "name": "frontend",
        },
      ],
      "data": [
        {
          "category": 2,
          "fixed": false,
          "id": "web",
          "name": "web",
          "symbolSize": 10,
          "value": 9,
        },
        {
          "category": 0,
          "fixed": false,
          "id": "api",
          "name": "api",
          "symbolSize": 10,
          "value": 6,
        },
        {
          "category": 1,
          "fixed": false,
          "id": "db",
          "name": "db",
          "symbolSize": 10,
          "value": 4,
        },
      ],
      "draggable": true,
      "edgeLabel": {
        "show": false,
      },
      "emphasis": {
        "focus": "adjacency",
        "lineStyle": {
          "width": 4,
        },
      },
      "force": {
        "edgeLength": 30,
        "friction": 0.6,
        "gravity": 0.1,
        "layoutAnimation": true,
        "repulsion": 100,
      },
      "label": {
        "color": "#18233C",
        "formatter": "{b}",
        "position": "right",
        "show": true,
      },
      "labelLayout": {
        "hideOverlap": true,
      },
      "layout": "force",
      "lineStyle": {
        "color": "source",
        "curveness": 0.3,
      },
      "links": [
        {
          "lineStyle": {
            "width": 1,
          },
          "source": "web",
          "target": "api",
          "value": 3,
        },
        {
          "lineStyle": {
            "width": 1,
          },
          "source": "api",
          "target": "db",
          "value": 2,
        },
      ],
      "name": "Graph",
      "roam": true,
      "type": "graph",
    },
  ],
  "tooltip": {
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Force-directed graph of network data.",
      },
      "specId": "viz:force_graph",
    },
  },
}
`;

exports[`viz.render network/hierarchy render-fidelity goldens > sankey: the produced echartsSpec matches the committed golden 1`] = `
{
  "aria": {
    "description": "Sankey diagram of flow data.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "data": [
        {
          "itemStyle": {
            "color": "rgb(65, 108, 217)",
          },
          "name": "Coal",
          "value": 100,
        },
        {
          "itemStyle": {
            "color": "rgb(62, 68, 190)",
          },
          "name": "Grid",
          "value": 100,
        },
        {
          "itemStyle": {
            "color": "rgb(39, 150, 105)",
          },
          "name": "Homes",
          "value": 60,
        },
        {
          "itemStyle": {
            "color": "rgb(181, 133, 37)",
          },
          "name": "Industry",
          "value": 40,
        },
      ],
      "emphasis": {
        "focus": "adjacency",
      },
      "itemStyle": {
        "borderColor": "#D6DAE4",
        "borderWidth": 1,
      },
      "label": {
        "color": "#18233C",
        "position": "right",
        "show": true,
      },
      "layoutIterations": 32,
      "lineStyle": {
        "color": "gradient",
        "curveness": 0.5,
        "opacity": 0.5,
      },
      "links": [
        {
          "source": "Coal",
          "target": "Grid",
          "value": 100,
        },
        {
          "source": "Grid",
          "target": "Homes",
          "value": 60,
        },
        {
          "source": "Grid",
          "target": "Industry",
          "value": 40,
        },
      ],
      "name": "Sankey",
      "nodeAlign": "justify",
      "nodeGap": 8,
      "nodeWidth": 20,
      "orient": "horizontal",
      "type": "sankey",
    },
  ],
  "tooltip": {
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Sankey diagram of flow data.",
      },
      "specId": "viz:sankey",
    },
  },
}
`;

exports[`viz.render network/hierarchy render-fidelity goldens > sunburst: the produced echartsSpec matches the committed golden 1`] = `
{
  "aria": {
    "description": "Sunburst of hierarchical data.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "data": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "Frontend",
                  "value": 25,
                },
                {
                  "children": [],
                  "name": "Backend",
                  "value": 35,
                },
              ],
              "itemStyle": {
                "color": "rgb(65, 108, 217)",
              },
              "name": "Engineering",
              "value": 60,
            },
            {
              "children": [],
              "itemStyle": {
                "color": "rgb(62, 68, 190)",
              },
              "name": "Sales",
              "value": 40,
            },
          ],
          "name": "Org",
          "value": 100,
        },
      ],
      "emphasis": {
        "focus": "ancestor",
        "itemStyle": {
          "borderColor": "#4B4D5A",
          "borderWidth": 3,
          "shadowBlur": 10,
        },
      },
      "itemStyle": {
        "borderColor": "#FDF3DE",
        "borderRadius": 4,
        "borderWidth": 2,
      },
      "label": {
        "color": "#18233C",
        "rotate": "radial",
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
      "levels": [
        {},
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 1,
          },
          "label": {
            "rotate": "tangential",
          },
          "r": "32%",
          "r0": "12%",
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 1,
          },
          "label": {
            "align": "right",
          },
          "r": "68%",
          "r0": "32%",
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 2,
          },
          "label": {
            "show": false,
          },
          "r": "72%",
          "r0": "68%",
        },
      ],
      "name": "Sunburst",
      "radius": [
        "0%",
        "90%",
      ],
      "sort": "desc",
      "startAngle": 90,
      "type": "sunburst",
    },
  ],
  "tooltip": {
    "trigger": "item",
    "triggerOn": "mousemove",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Sunburst of hierarchical data.",
      },
      "specId": "viz:sunburst",
    },
  },
}
`;

exports[`viz.render network/hierarchy render-fidelity goldens > treemap: the produced echartsSpec matches the committed golden 1`] = `
{
  "aria": {
    "description": "Treemap of hierarchical data.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "breadcrumb": {
        "itemStyle": {
          "borderColor": "#D6DAE4",
          "color": "#FDF3DE",
        },
        "show": true,
        "textStyle": {
          "color": "#18233C",
        },
      },
      "data": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "Frontend",
                  "value": 25,
                },
                {
                  "children": [],
                  "name": "Backend",
                  "value": 35,
                },
              ],
              "itemStyle": {
                "color": "rgb(65, 108, 217)",
              },
              "name": "Engineering",
              "value": 60,
            },
            {
              "children": [],
              "itemStyle": {
                "color": "rgb(62, 68, 190)",
              },
              "name": "Sales",
              "value": 40,
            },
          ],
          "name": "Org",
          "value": 100,
        },
      ],
      "emphasis": {
        "focus": "ancestor",
        "itemStyle": {
          "borderColor": "#4B4D5A",
          "borderWidth": 2,
          "shadowBlur": 2,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
        },
      },
      "itemStyle": {
        "borderColor": "#D6DAE4",
        "borderWidth": 1,
        "gapWidth": 1,
      },
      "label": {
        "color": "#18233C",
        "formatter": "{b}",
        "show": true,
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
      "levels": [
        {
          "itemStyle": {
            "borderWidth": 0,
            "gapWidth": 4,
          },
          "upperLabel": {
            "show": false,
          },
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 2,
            "gapWidth": 2,
          },
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 1,
            "gapWidth": 1,
          },
        },
      ],
      "name": "Treemap",
      "nodeClick": "zoomToNode",
      "roam": false,
      "squareRatio": 1.618,
      "type": "treemap",
      "upperLabel": {
        "color": "#18233C",
        "height": 28,
        "show": true,
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
    },
  ],
  "tooltip": {
    "trigger": "item",
    "triggerOn": "mousemove",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Treemap of hierarchical data.",
      },
      "specId": "viz:treemap",
    },
  },
}
`;
